--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -32,7 +32,7 @@
         <strong>Ministerie van Binnenlandse Zaken en Koninkrijksrelaties (MinBZK)</strong><br>
         Postbus 20011<br>
         2500 EA Den Haag<br>
-        <a href="mailto:regelrecht@minbzk.nl">regelrecht@minbzk.nl</a>
+        <a href="mailto:bureau.architectuur@minbzk.nl">bureau.architectuur@minbzk.nl</a>
       </p>
     </div>
 
@@ -69,7 +69,7 @@
 
     <div class="card">
       <h2 class="card-title">5. Bewaartermijn</h2>
-      <p>Uw gegevens worden bewaard voor de duur van het Proof of Concept, met een maximale bewaartermijn van <strong>12 maanden</strong> na indiening. Na afloop van de PoC worden de gegevens verwijderd, tenzij u expliciet toestemming geeft voor langer bewaren.</p>
+      <p>Uw gegevens worden bewaard <strong>gedurende de looptijd van de PoC implementatie</strong>. Dit betreft de periode die nodig is voor het uitvoeren van de Proof of Concept en het afronden van de daaruit voortvloeiende werkzaamheden. Na afloop worden de gegevens verwijderd, tenzij u expliciet toestemming geeft voor langer bewaren. U kunt te allen tijde informeren naar de actuele einddatum via <a href="mailto:bureau.architectuur@minbzk.nl">bureau.architectuur@minbzk.nl</a>.</p>
     </div>
 
     <div class="card">
@@ -83,7 +83,7 @@
         <li><strong>Recht op dataportabiliteit</strong> - U kunt uw gegevens opvragen in een overdraagbaar formaat</li>
         <li><strong>Recht van bezwaar</strong> - U kunt bezwaar maken tegen de verwerking</li>
       </ul>
-      <p style="margin-top: 12px;">Om uw rechten uit te oefenen, neem contact op via <a href="mailto:regelrecht@minbzk.nl">regelrecht@minbzk.nl</a>.</p>
+      <p style="margin-top: 12px;">Om uw rechten uit te oefenen, neem contact op via <a href="mailto:bureau.architectuur@minbzk.nl">bureau.architectuur@minbzk.nl</a>.</p>
     </div>
 
     <div class="card">
