fix FAQ aanpassing en formatting error

--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -32,7 +32,7 @@
     <div class="card" style="margin-top: 32px; text-align: center;">
       <h2 class="card-title">Heeft u nog vragen?</h2>
       <p style="margin-bottom: 16px;">Neem contact op met het RegelRecht team.</p>
-      <a href="mailto:regelrecht@minbzk.nl">
+      <a href="mailto:bureau.architectuur@minbzk.nl">
         <rr-button variant="secondary">Contact opnemen</rr-button>
       </a>
     </div>
