--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -54,6 +54,16 @@
         <li><strong>Toestemming</strong> - Door het indienen van documenten geeft u toestemming voor de verwerking</li>
         <li><strong>Gerechtvaardigd belang</strong> - Het uitvoeren van onderzoek naar machine-leesbare regels ten behoeve van de overheid</li>
       </ul>
+      <div style="margin-top: 16px; padding: 16px; background: var(--color-slate-50); border-radius: 6px; border-left: 4px solid var(--color-primary);">
+        <strong>Toestemming bij indiening</strong>
+        <p style="margin-top: 8px;">Door het indienen van documenten via de RegelRecht Upload Portal:</p>
+        <ul style="margin: 8px 0 0 20px;">
+          <li>Verklaart u kennis te hebben genomen van deze privacyverklaring</li>
+          <li>Geeft u toestemming voor de verwerking van uw persoonsgegevens zoals beschreven in deze verklaring</li>
+          <li>Geeft u toestemming voor het gebruik van uw documenten voor het RegelRecht onderzoeksproject</li>
+        </ul>
+        <p style="margin-top: 8px;">U kunt uw toestemming te allen tijde intrekken door contact op te nemen via <a href="mailto:bureau.architectuur@minbzk.nl">bureau.architectuur@minbzk.nl</a>. Het intrekken van toestemming heeft geen invloed op de rechtmatigheid van verwerkingen die hebben plaatsgevonden vóór de intrekking.</p>
+      </div>
     </div>
 
     <div class="card">
