--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -68,6 +68,20 @@
         <rr-text-field id="organization_department" name="organization_department" placeholder="Optioneel"></rr-text-field>
       </div>
 
+      <div class="form-group" style="margin-top: 24px;">
+        <label class="checkbox-label">
+          <input type="checkbox" id="consent_privacy" required>
+          <span>Ik heb de <a href="/privacy.html" target="_blank">privacyverklaring</a> gelezen en ga akkoord met de verwerking van mijn gegevens voor de PoC implementatie.</span>
+        </label>
+      </div>
+
+      <div class="form-group">
+        <label class="checkbox-label">
+          <input type="checkbox" id="consent_documents" required>
+          <span>Ik geef toestemming voor het gebruik van de door mij geüploade documenten voor het RegelRecht onderzoeksproject.</span>
+        </label>
+      </div>
+
       <div class="button-group">
         <rr-button variant="primary" id="btn-next-1">Volgende</rr-button>
       </div>
