feat: add 12-month retention period with expiry date tracking   - Update all frontend dates from 2024 to 2026   - Change retention policy from "PoC duration" to "12 months after submission"   - Add retention_expiry_date field to submissions table and models   - Add database migration 003_retention_date.sql   - Add /status.html page for applicants to lookup their submission status   - Show expiry date in admin submissions table and detail view   - Update privacy statement and DPIA documentation   - Add navigation link to status page across all frontend pages

--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -15,6 +15,7 @@
       </a>
       <nav class="nav-links">
         <a href="/submit.html">Nieuwe inzending</a>
+        <a href="/status.html">Status opvragen</a>
         <a href="/faq.html">FAQ</a>
         <a href="/privacy.html">Privacy</a>
       </nav>
@@ -79,7 +80,7 @@
 
     <div class="card">
       <h2 class="card-title">5. Bewaartermijn</h2>
-      <p>Uw gegevens worden bewaard <strong>gedurende de looptijd van de PoC implementatie</strong>. Dit betreft de periode die nodig is voor het uitvoeren van de Proof of Concept en het afronden van de daaruit voortvloeiende werkzaamheden. Na afloop worden de gegevens verwijderd, tenzij u expliciet toestemming geeft voor langer bewaren. U kunt te allen tijde informeren naar de actuele einddatum via <a href="mailto:bureau.architectuur@minbzk.nl">bureau.architectuur@minbzk.nl</a>.</p>
+      <p>Uw gegevens worden bewaard tot <strong>12 maanden na indiening</strong>. Na afloop van deze periode worden de gegevens verwijderd, tenzij u expliciet toestemming geeft voor langer bewaren. U kunt te allen tijde informeren naar de actuele vervaldatum van uw inzending via <a href="mailto:bureau.architectuur@minbzk.nl">bureau.architectuur@minbzk.nl</a> of door de status van uw inzending op te vragen.</p>
     </div>
 
     <div class="card">
@@ -125,13 +126,13 @@
     </div>
 
     <p style="margin-top: 24px; color: var(--color-slate-600); font-size: 0.875rem;">
-      Laatste update: februari 2024
+      Laatste update: februari 2026
     </p>
   </main>
 
   <footer class="footer">
     <div class="footer-content">
-      <span>&copy; 2024 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
+      <span>&copy; 2026 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
       <nav class="footer-links">
         <a href="/privacy.html">Privacyverklaring</a>
         <a href="/faq.html">FAQ</a>
