--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
       </a>
       <nav class="nav-links">
         <a href="/submit.html">Nieuwe inzending</a>
+        <a href="/status.html">Status opvragen</a>
         <a href="/faq.html">FAQ</a>
         <a href="/privacy.html">Privacy</a>
       </nav>
@@ -75,7 +76,7 @@
 
   <footer class="footer">
     <div class="footer-content">
-      <span>&copy; 2024 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
+      <span>&copy; 2026 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
       <nav class="footer-links">
         <a href="/privacy.html">Privacyverklaring</a>
         <a href="/faq.html">FAQ</a>
