--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -15,6 +15,7 @@
       </a>
       <nav class="nav-links">
         <a href="/submit.html">Nieuwe inzending</a>
+        <a href="/status.html">Status opvragen</a>
         <a href="/faq.html">FAQ</a>
         <a href="/privacy.html">Privacy</a>
       </nav>
@@ -184,14 +185,15 @@
       <div style="background: var(--color-slate-100); padding: 16px; border-radius: 8px; font-family: monospace; font-size: 1.25rem;" id="submission-slug"></div>
       <p style="margin-top: 16px; color: var(--color-slate-600);">Bewaar deze referentie om uw inzending later op te kunnen vragen.</p>
       <div class="button-group" style="justify-content: center; margin-top: 24px;">
-        <a href="/"><rr-button variant="primary">Terug naar home</rr-button></a>
+        <a href="/" id="link-home"><rr-button variant="secondary">Terug naar home</rr-button></a>
+        <a href="/status.html" id="link-status"><rr-button variant="primary">Bekijk status</rr-button></a>
       </div>
     </div>
   </main>
 
   <footer class="footer">
     <div class="footer-content">
-      <span>&copy; 2024 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
+      <span>&copy; 2026 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
       <nav class="footer-links">
         <a href="/privacy.html">Privacyverklaring</a>
         <a href="/faq.html">FAQ</a>
