fix: generalize classification label from Claude to non-EU AI services
Replace vendor-specific "Claude toegestaan" label with generic
"Verwerking door niet-EU AI-diensten toegestaan" across all
user-facing text. Internal DB enum value unchanged.

--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -125,7 +125,7 @@
           <rr-select-field id="doc_classification" required>
             <option value="">Selecteer classificatie...</option>
             <option value="public">Publiek - Mag gepubliceerd worden</option>
-            <option value="claude_allowed">Claude toegestaan - Mag met AI worden gebruikt</option>
+            <option value="claude_allowed">Verwerking door niet-EU AI-diensten toegestaan</option>
             <option value="restricted">Beperkt - Niet met AI gebruiken</option>
           </rr-select-field>
         </div>
