--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -14,12 +14,6 @@
         <span class="logo-text">RegelRecht</span>
         <span class="logo-subtitle">Upload Portal</span>
       </a>
-      <nav class="nav-links">
-        <a href="/submit.html">Nieuwe inzending</a>
-        <a href="/status.html">Status opvragen</a>
-        <a href="/faq.html">FAQ</a>
-        <a href="/privacy.html">Privacy</a>
-      </nav>
     </div>
   </header>
 
@@ -131,7 +125,7 @@
     </p>
   </main>
 
-  <footer class="footer">
+  <footer class="footer footer-legal">
     <div class="footer-content">
       <span>&copy; 2026 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
       <nav class="footer-links">
