--- a/frontend/status.html
+++ b/frontend/status.html
@@ -14,12 +14,6 @@
         <span class="logo-text">RegelRecht</span>
         <span class="logo-subtitle">Upload Portal</span>
       </a>
-      <nav class="nav-links">
-        <a href="/submit.html">Nieuwe inzending</a>
-        <a href="/status.html">Status opvragen</a>
-        <a href="/faq.html">FAQ</a>
-        <a href="/privacy.html">Privacy</a>
-      </nav>
     </div>
   </header>
 
@@ -35,8 +29,9 @@
       <p style="margin-bottom: 16px;">De referentiecode heeft u ontvangen na het afronden van uw inzending (bijv. rr-20260216-abc12).</p>
 
       <div class="form-group">
-        <label class="form-label required">Referentiecode</label>
-        <rr-text-field id="slug" name="slug" placeholder="rr-20260216-xxxxx" required></rr-text-field>
+        <label class="form-label">Referentiecode</label>
+        <p class="field-hint">Bijvoorbeeld: rr-20260216-abc12</p>
+        <rr-text-field id="slug" name="slug" required></rr-text-field>
       </div>
 
       <div class="button-group">
@@ -76,7 +71,7 @@
     </div>
   </main>
 
-  <footer class="footer">
+  <footer class="footer footer-legal">
     <div class="footer-content">
       <span>&copy; 2026 Ministerie van Binnenlandse Zaken en Koninkrijksrelaties</span>
       <nav class="footer-links">
